--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
-    "flowbite": "^1.5.3"
+    "flowbite": "^1.5.3",
+    "moment": "^2.29.4"
   }
 }
