ran prettier, eslint and build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,10 @@
         "node": true
     },
     "extends": "airbnb-base",
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "rules": {
-    }
+    "rules": {}
 }
-
