added jest and babel, test folder with successful sum&sum.test, added src folder and moved html pages, js files, images and css file, redirect in vite- and tailwind config files

--- a/.eslintignore
+++ b/.eslintignore
@@ -21,8 +21,8 @@ tailwind.config.js
 postcss.config.js
 vite.config.js
 
-uploads
-style.css
+src/uploads
+src/style.css
 
 # Editor directories and files
 .vscode/*
