--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "vite": "^3.1.0"
     },
     "dependencies": {
+        "@jest/globals": "^29.3.1",
         "flowbite": "^1.5.3",
         "moment": "^2.29.4"
     }
